--- a/templates/fanscard/premiun_card.html
+++ b/templates/fanscard/premiun_card.html
@@ -219,8 +219,8 @@
     <a href="{% url 'payment' %}" class="btn-link">VIP <br><br> $1000</a>
     <a href="{% url 'payment' %}" class="btn-link">SILVER <br> <br> %1500</a>
     <a href="{% url 'payment' %}" class="btn-link">BRONZE <br> <br> $2000</a>
-    <a href="{% url 'payment' %}" class="btn-link">PLATINUM <br> <br> %2500</a>
-    <a href="{% url 'payment' %}" class="btn-link">GOLD <br> <br> %3000</a>
+    <a href="{% url 'payment' %}" class="btn-link">PLATINUM <br> <br> $2500</a>
+    <a href="{% url 'payment' %}" class="btn-link">GOLD <br> <br> $3000</a>
   </div>
 
   <!-- Fan Card inside container -->
